# DMA2

./: 0f93ec9db55c371c@v1 (17)  0f93ec9db55c371c@v2  1.json  1f696e8495da9ddf@v2 (10)  1f696e8495da9ddf@v2 (3)  1f696e8495da9ddf@v3 (20)  2.json  3.json  4.json  79d0d487324c42be@v2  947f4abba7cddd42@v2 (1)  9a46cf67b9319a67@v3  README.md  Sidebar.tsx  app.js  be6a5717cb244147@v1 (7)  c231f243a940655e@v2  claude-powered-launcher (1).skill  download  f(1).txt  f(10).txt  f(11).txt  f(12).txt  f(13).txt  f(14).txt  f(2).txt  f(3).txt  f(4).txt  f(5).txt  f(6).txt  f(7).txt  f(8).txt  f(9).txt  f.txt  f6ac08139fe9ae0e@v2  f6ac08139fe9ae0e@v3  index.html  layout.tsx  mocs-marketing360-dashboard (1).skill  page (6).tsx  (+11 more)
dashboards/: design-dashboard.html  knowledge-book.html  marketing360.html  roofing-redesign.html  state-of-play.html  token-optimization.html  workflow-launcher.html
skills/marketing/: SKILL.md
skills/operations/: SKILL.md
skills/research-intel/: SKILL.md
skills/web-intelligence/: SKILL.md
skills/website-design/: SKILL.md
source-skills/: business-command-launcher.skill  claude-powered-launcher (3).skill  claude-powered-launcher.skill  token-optimization-workflow (1).skill
