[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "topside-ai-os"
version = "1.0.0"
description = "Marketing analysis and CRM automation AI OS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "pandas>=2.0",
    "plotly>=5.20",
    "pydantic>=2.0",
    "streamlit>=1.35.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
excel = ["openpyxl>=3.1"]

[project.scripts]
ai-os = "ai_os.actions:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

